--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <script type="text/javascript">
 
-    window.difficulty = [10, 10];
+    window.difficulty = [0, 5];
     function changeDifficulty(ele, diff) {
       console.log('改变游戏难度:', diff)
       $('[name=difficulty]').css('background-color', '');
@@ -138,7 +138,7 @@
       , btnAlign: 'c'
       , shadeClose: true //开启遮罩关闭
       , moveType: 1 //拖拽模式，0或者1
-      , content: '<div style="padding: 45px; line-height: 25px; background-color: #393D49; color: #fff; font-weight: 200;">'+
+      , content: '<div style="padding: 45px; line-height: 25px; background-color: #fff; color: #000; font-weight: 200;">'+
       '<h4>合成一个王俊凯</h4><span>如果游戏有需要改进的地方<br> <strong><a style="color:#06f" href="https://weibo.com/u/5974324312">请联系我</a></strong><br/><br/><br/><span style="font-size:12px;line-height: 15px;position:absolute;bottom:10px;left:25%">本作品仅为学习/娱乐<br/>原版游戏:<a href="http://www.wesane.com/game/654">合成大西瓜</a>在此<br>如果本作品侵犯了您的权益<br/>请联系我</span></div>',
       success: function (layero) {
 
@@ -158,7 +158,7 @@
             , shadeClose: true //开启遮罩关闭
             , moveType: 1 //拖拽模式，0或者1
             , content:
-              '<div style="padding: 45px;text-align:center; line-height: 25px; background-color: #393D49; color: #fff; font-weight: 300;"><h4>模式选择</h4>'
+              '<div style="padding: 45px;text-align:center; line-height: 25px; background-color: #fff; color: #000; font-weight: 300;"><h4>模式选择</h4>'
               // + '<button name="difficulty" onclick="changeDifficulty(this,[0,10])">随缘Play</button><br>'
               + '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[2,6])">简单模式</button><br>'
               + '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[0,5])">正常模式</button><br>'
