--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
     </script> -->
 
-  <link rel="stylesheet" type="text/css" href="./src/style-mobile.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/style-mobile.min.css" />
 
 </head>
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-931TPCC4WG"></script> -->
@@ -88,7 +88,7 @@
 
 
   <!-- <script type="text/javascript" src="./src/ima3.js"></script> -->
-  <script type="text/javascript" src="./src/ads.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ads.min.js"></script>
 
   <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;">
   </div>
@@ -115,7 +115,7 @@
   <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
 
-  <script src="./src/settings.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.min.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     window.difficulty = [0, 5];
@@ -286,9 +286,9 @@
   <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 
-  <script src="./src/settings.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.min.js" charset="utf-8"></script>
 
-  <script src="./src/main.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/main.min.js" charset="utf-8"></script>
 
 
   <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
