--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 <body style="margin: 0; background: #ddd;" align="center">
-  <div style="align:center;display: none"><img src="./res/share.jpg" width="10%" /></div>
+  <div style="align:center;display: none"><img src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/res/share.jpg" width="10%" /></div>
 
   <div id="canvasDiv" style="width:100%;height:100%;">
     <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -104,7 +104,7 @@
   </div>
 
   <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
-    <img src="./res/loading.gif" width="7%" height="7%" />
+    <img src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/res/loading.gif" width="7%" height="7%" />
   </div>
 
   <!-- 判断浏览器是否屏蔽广告 -->
