--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <script>
   </script>
   <!-- <script data-ad-client="ca-pub-4128836556935589" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-  <title>合成一个王俊凯</title>
+  <title>合成一个易烊千玺</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
     content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
-
+  
   <script src="//cdn.staticfile.org/jquery/1.12.3/jquery.min.js"></script>
   <script src="//cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
-  <link href="//cdn.bootcss.com/layer/3.0.1/skin/default/layer.css" rel="stylesheet">
+<link href="//cdn.bootcss.com/layer/3.0.1/skin/default/layer.css" rel="stylesheet">
   <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -64,7 +64,7 @@
         }
     </script> -->
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/style-mobile.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/style-mobile.css" />
 
 </head>
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-931TPCC4WG"></script> -->
@@ -87,8 +87,8 @@
 
 
 
-  <!-- <script type="text/javascript" src="./src/ima3.js"></script> -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ads.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ima3.js"></script> -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ads.js"></script>
 
   <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;">
   </div>
@@ -115,11 +115,11 @@
   <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
 
-  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.min.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.js" charset="utf-8"></script>
 
   <script type="text/javascript">
-    window.difficulty = [0, 5];
 
+    window.difficulty = [0, 5];
     function changeDifficulty(ele, diff) {
       console.log('改变游戏难度:', diff)
       $('[name=difficulty]').css('background-color', '');
@@ -127,55 +127,47 @@
       window.difficulty = diff;
     }
     layer.open({
-      type: 1,
-      title: false //不显示标题栏
-        ,
-      closeBtn: false,
-      area: '300px;',
-      shade: 0.8,
-      id: 'layer1' //设定一个id，防止重复弹出
-        ,
-      resize: false,
-      btn: ['选择模式'],
-      btnAlign: 'c',
-      shadeClose: true //开启遮罩关闭
-        ,
-      moveType: 1 //拖拽模式，0或者1
-        ,
-      content: '<div style="padding: 45px; line-height: 25px; background-color: white; color: #000; font-weight: 200;">' +
-        '<h3>合成一个王俊凯</h3><span>游戏有需要改进的地方或有定制需求<br> <strong><a style="color:#06f" href="https://weibo.com/u/5974324312">请联系我</a></strong><br/><br/><br/><span style="font-size:12px;line-height: 15px;position:absolute;bottom:10px;left:25%">本作品仅为学习/娱乐<br/>原版游戏:<a href="http://www.wesane.com/game/654">合成大西瓜</a>在此<br>如果本作品侵犯了您的权益<br/>请联系我</span></div>',
+      type: 1
+      , title: false //不显示标题栏
+      , closeBtn: false
+      , area: '300px;'
+      , shade: 0.8
+      , id: 'layer1' //设定一个id，防止重复弹出
+      , resize: false
+      , btn: ['选择模式']
+      , btnAlign: 'c'
+      , shadeClose: true //开启遮罩关闭
+      , moveType: 1 //拖拽模式，0或者1
+      , content: '<div style="padding: 45px; line-height: 25px; background-color: white; color: #000; font-weight: 200;">'+
+      '<h3>合成一个易烊千玺</h3><span>游戏有需要改进的地方或有定制需求<br> <strong><a style="color:#06f" href="https://weibo.com/u/5974324312">请联系我</a></strong><br/><br/><br/><span style="font-size:12px;line-height: 15px;position:absolute;bottom:10px;left:25%">本作品仅为学习/娱乐<br/>原版游戏:<a href="http://www.wesane.com/game/654">合成大西瓜</a>在此<br>如果本作品侵犯了您的权益<br/>请联系我</span></div>',
       success: function (layero) {
 
         var btn = layero.find('.layui-layer-btn');
         btn.find('.layui-layer-btn0').click(function () {
           layer.close();
           layer.open({
-            type: 1,
-            title: false //不显示标题栏
-              ,
-            closeBtn: false,
-            area: '300px;',
-            shade: 0.8,
-            id: 'layer2' //设定一个id，防止重复弹出
-              ,
-            resize: false,
-            btn: ['开始游戏'],
-            btnAlign: 'c',
-            shadeClose: true //开启遮罩关闭
-              ,
-            moveType: 1 //拖拽模式，0或者1
-              ,
-            content: '<div style="padding: 45px;text-align:center; line-height: 25px; background-color: #fff; color: #000; font-weight: 300;"><h4>模式选择</h4>'
+            type: 1
+            , title: false //不显示标题栏
+            , closeBtn: false
+            , area: '300px;'
+            , shade: 0.8
+            , id: 'layer2' //设定一个id，防止重复弹出
+            , resize: false
+            , btn: ['开始游戏']
+            , btnAlign: 'c'
+            , shadeClose: true //开启遮罩关闭
+            , moveType: 1 //拖拽模式，0或者1
+            , content:
+              '<div style="padding: 45px;text-align:center; line-height: 25px; background-color: #fff; color: #000; font-weight: 300;"><h4>模式选择</h4>'
               // + '<button name="difficulty" onclick="changeDifficulty(this,[0,10])">随缘Play</button><br>'
-              +
-              '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[2,6])">简单模式</button><br>' +
-              '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[0,5])">正常模式</button><br>' +
-              '<button name="difficulty" style="font-size: 16px; " onclick="changeDifficulty(this,[0,2])">困难模式</button><br>'
+              + '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[2,6])">简单模式</button><br>'
+              + '<button name="difficulty" style="font-size: 16px; margin-bottom: 8px" onclick="changeDifficulty(this,[0,5])">正常模式</button><br>'
+              + '<button name="difficulty" style="font-size: 16px; " onclick="changeDifficulty(this,[0,2])">困难模式</button><br>'
               // + '<button name="difficulty" style="background-color:#1E9FFF" onclick="changeDifficulty(this,[5,5])">作弊模式</button><br>'
               // + '<button name="difficulty" onclick="changeDifficulty(this,[9,9])">暴力吃瓜</button><br>'
-              +
-              '</div>',
-            success: function (layero) {}
+              + '</div>',
+            success: function (layero) {
+            }
           });
         });
       }
@@ -189,12 +181,11 @@
     var resEndComplete = false;
 
     judgeLanTitle();
-
     function judgeLanTitle() {
 
       //        console.log("window.navigator.language",window.navigator.language);
 
-      document.title = "合成一个王俊凯";
+        document.title = "合成一个易烊千玺";
 
     }
 
@@ -213,7 +204,6 @@
     loadData.totalCount = 0;
 
     onload();
-
     function onload() {
       var winHeight = document.documentElement.clientHeight;
       document.getElementById("canvasDiv").style.height = winHeight + "px";
@@ -280,10 +270,12 @@
 
 
     /*setTimeout("ShowBannerAD()","2000");*/
+
+
   </script>
 
 
-  <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 
   <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.min.js" charset="utf-8"></script>
@@ -326,30 +318,30 @@
 
 
   <script type="text/javascript">
-    (function () {
-      // open web debugger console
-      if (typeof VConsole !== 'undefined') {
-        window.vConsole = new VConsole();
-      }
+      (function () {
+        // open web debugger console
+        if (typeof VConsole !== 'undefined') {
+          window.vConsole = new VConsole();
+        }
 
-      var splash = document.getElementById('splash');
-      splash.style.display = 'block';
+        var splash = document.getElementById('splash');
+        splash.style.display = 'block';
 
 
-      console.log("indexlTextTTTT");
+        console.log("indexlTextTTTT");
 
-      var cocos2d = document.createElement('script');
-      cocos2d.async = true;
-      cocos2d.src = './cocos2d-js-min.js';
+        var cocos2d = document.createElement('script');
+        cocos2d.async = true;
+        cocos2d.src = './cocos2d-js-min.js';
 
-      var engineLoaded = function () {
-        document.body.removeChild(cocos2d);
-        cocos2d.removeEventListener('load', engineLoaded, false);
-        window.boot();
-      };
-      cocos2d.addEventListener('load', engineLoaded, false);
-      document.body.appendChild(cocos2d);
-    })();
+        var engineLoaded = function () {
+          document.body.removeChild(cocos2d);
+          cocos2d.removeEventListener('load', engineLoaded, false);
+          window.boot();
+        };
+        cocos2d.addEventListener('load', engineLoaded, false);
+        document.body.appendChild(cocos2d);
+      })();
   </script>
 
 
@@ -358,3 +350,4 @@
 </body>
 
 </html>
+
