--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         }
     </script> -->
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/style-mobile.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/style-mobile.css" />
 
 </head>
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-931TPCC4WG"></script> -->
 
 
 <body style="margin: 0; background: #ddd;" align="center">
-  <div style="align:center;display: none"><img src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/res/share.jpg" width="10%" /></div>
+  <div style="align:center;display: none"><img src="https://cdn.jsdelivr.net/gh/Slackboi/djx/res/share.jpg" width="10%" /></div>
 
   <div id="canvasDiv" style="width:100%;height:100%;">
     <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -87,8 +87,8 @@
 
 
 
-  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ima3.js"></script> -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/ads.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/ima3.js"></script> -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/ads.js"></script>
 
   <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;">
   </div>
@@ -104,7 +104,7 @@
   </div>
 
   <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
-    <img src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/res/loading.gif" width="7%" height="7%" />
+    <img src="https://cdn.jsdelivr.net/gh/Slackboi/djx/res/loading.gif" width="7%" height="7%" />
   </div>
 
   <!-- 判断浏览器是否屏蔽广告 -->
@@ -115,7 +115,7 @@
   <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
 
-  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/settings.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     window.difficulty = [0, 5];
@@ -129,7 +129,7 @@
       console.log('跳转链接:', name)
       switch (name) {
         case 'wjk':
-          window.location.href='https://Slackboi.github.io/wjkpintu'
+          window.location.href='https://Slackboi.github.io/djx'
           break;
 
         case 'wky':
@@ -310,9 +310,9 @@
 <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 
-  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/settings.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/settings.js" charset="utf-8"></script>
 
-  <script src="https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/src/main.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Slackboi/djx/src/main.js" charset="utf-8"></script>
 
 
   <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
@@ -364,7 +364,7 @@
 
         var cocos2d = document.createElement('script');
         cocos2d.async = true;
-        cocos2d.src = 'https://cdn.jsdelivr.net/gh/Slackboi/wjkpintu/cocos2d-js-min.js';
+        cocos2d.src = 'https://cdn.jsdelivr.net/gh/Slackboi/djx/cocos2d-js-min.js';
 
         var engineLoaded = function () {
           document.body.removeChild(cocos2d);
